# librustc

./: Cargo.toml  README.md  default.nix  flake.nix  preload-rustc.sh  test
.github/workflows/: test.yml
examples/: compile.rs  simple.rs
src/: ffi.rs  lib.rs  loader.rs
tests/: test.rs
