[package]
name = "librustc"
version = "0.1.0"
edition = "2021"
authors = ["meta-introspector"]
description = "Universal dynamic rustc loader - no static linking required"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
libloading = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
